Thu Jul 18 19:24:08 1996  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* wrapper.c (wrap_setup): Don't look in repository if client_active.
	* wrapper.c, cvs.h (wrap_send): New function.
	* update.c (update), import.c (import): Call it.
	* sanity.sh (binwrap): Do binwrap tests for remote as well as
	local; tests for above fixes.
	* wrapper.c: Add a few FIXME comments.

Thu Jul 18 18:43:50 1996  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh (patch): Fix names of a couple of tests to say patch
	rather than death2.

Thu Jul 18 16:19:21 1996  Bill Bumgarner <bbum@friday.com>
			  and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add), import.c (add_rcs_file): Check for options from
	wrappers and use them if specified.
	* cvs.h (WrapMergeHas): Add WRAP_RCSOPTION.
	* wrapper.c (WrapperEntry): Add rcsOption field.
	(wrap_add): Allow a single character argument to an option.
	(wrap_add): Handle -k option.
	(wrap_add_entry): Handle rcsOption field.
	(wrap_name_has): Handle WRAP_RCSOPTION.
	* wrapper.c, cvs.h (wrap_rcsoption): New function.
	* add.c, import.c, wrapper.c: Minor beautification (mostly
	removing trailing spaces).
	* sanity.sh (binwrap): New tests test for this feature.

Wed Jul 17 10:14:20 1996  Ian Lance Taylor  <ian@cygnus.com>

	* checkout.c (checkout): Remove extraneous else accidentally
	inserted in last checkin.

Tue Jul 16 11:37:41 1996  Ian Lance Taylor  <ian@cygnus.com>

	* sanity.sh (import): Use quoting to avoid expansion of RCS ID
	strings.

	* sanity.sh (import): Use dotest to examine the output of test
 	113, and the actual contents of the file in test 116.

	* update.c (join_file): Always skip rcsmerge if the two revisions
 	are the same (the old code always did the rcsmerge when two -j
	options were specified).

	* checkout.c (history_name): New static variable.
	(checkout): Permit both tag and date to be specified.  Set
	history_name.
	(checkout_proc): Use history_name when calling history_write.